--- a/src/loginWindow.css
+++ b/src/loginWindow.css
@@ -1,3 +1,6 @@
+@import url(https://fonts.googleapis.com/css?family=Lato);
+@import url(https://fonts.googleapis.com/css?family=Muli|Open+Sans);
+
 body {
   margin: 0;
   font-size: 0.9rem;
@@ -7,7 +10,11 @@ body {
   text-align: left;
   background-color: white;
 }
-
+body {
+  background: url(./images/background.svg) no-repeat center center fixed;
+  background-size: cover;
+  height: 100%;
+}
 .navbar-laravel {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
@@ -16,7 +23,7 @@ body {
 .nav-link,
 .my-form,
 .login-form {
-  font-family: Raleway, sans-serif;
+  font-weight: bold;
 }
 
 .my-form {
@@ -26,18 +33,90 @@ body {
 
 .my-form .row {
   margin-left: 0;
-  margin-right: 0;
 }
 
 .login-form {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+  font-family: Lato;
+  font-size: 26px;
 }
-
+.bk-box {
+  background-color: white;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+  padding-left: 3em;
+  padding-right: 3em;
+  margin-bottom: 50px;
+  box-shadow: 2px 2px 9px 0 rgba(0, 0, 0, 0.5);
+  height: 550px;
+}
+.remove-border {
+  border: none;
+}
 .login-form .row {
   margin-left: 0;
   margin-right: 0;
 }
+.one-border {
+  height: 15px;
+  border-style: solid;
+  border-width: 0px 0px 1px 0px;
+  border-color: #9b9b9b;
+  color: #4a4a4a;
+  margin: None;
+}
 .tfnav {
   height: 100px;
+}
+.label-styled {
+  color: #b4b4b4;
+  font-family: Lato;
+}
+.btn-styled {
+  color: white;
+  font-family: Lato;
+  font-size: 14px;
+  font-weight: bold;
+  width: 100%;
+  margin: auto;
+  height: 35px;
+  margin-top: 20px;
+
+  background-image: linear-gradient(to top, #6779eb, #5cb5e6);
+}
+.margin-d-2 {
+  color: #747275;
+  margin-bottom: 20px;
+  font-family: Lato;
+  font-size: 26px;
+}
+.input-border {
+  height: 30px;
+  font-family: Muli;
+}
+.margin-bottom-large {
+  margin-bottom: 193px;
+}
+.logo-button {
+  background: url(./images/logo.svg);
+  height: 45px;
+  width: 60px;
+  background-size: cover;
+  border: none;
+}
+.super-logo {
+  border: none;
+  background-color: #f8f8f8;
+  color: #5cb5e6;
+  font-family: Lato;
+}
+.form-group {
+}
+.ttSignUp {
+  text-align: center;
+  position: relative;
+  width: 100%;
+  font-family: Muli;
+  font-size: 12px;
+  padding-top: 15px;
+  margin-bottom: 30px;
 }
