--- a/src/ttLogIn.css
+++ b/src/ttLogIn.css
@@ -54,31 +54,20 @@ body {
   background-size: cover;
   border: none;
 }
-.form-sign {
+.form-sign-1 {
   text-align: center;
   width: 50%;
   height: 800px;
   padding-top: 200px;
-  background-image: url("./images/animation.gif");
-  font-weight: bold;
-  background-color: rgba(255, 255, 255, 0.7);
-
-  opacity: 0;
-  animation-name: FadeIn;
-  animation-duration: 3s;
-  animation-iteration-count: 1;
-  -webkit-animation-name: FadeIn;
-  -webkit-animation-duration: 3s;
-  -webkit-iteration-count: 1;
 }
-.form-sign h2 {
+.form-sign-1 h2 {
   font-family: Lato;
   font-size: 50px;
   font-weight: bold;
   font-style: normal;
   color: #4a4a4a;
 }
-.form-sign h3 {
+.form-sign-1 h3 {
   font-family: Muli;
   font-size: 25px;
   color: #4a4a4a;
@@ -119,4 +108,69 @@ body {
   100% {
     opacity: 0;
   }
+}
+.schedule {
+  padding-top: 10%;
+  text-align: center;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 50%;
+  height: 600px;
+  opacity: 1;
+  animation-name: FadeOut;
+  animation-duration: 4s;
+  animation-iteration-count: 1;
+  -webkit-animation-name: FadeOut;
+  -webkit-animation-duration: 4s;
+  -webkit-iteration-count: 1;
+}
+.schedule h2 {
+  font-family: Lato;
+  font-size: 45px;
+  font-weight: bold;
+  color: #4a4a4a;
+}
+.schedule p {
+  font-family: Muli;
+  font-size: 22px;
+  color: #4a4a4a;
+}
+.schedule h3 {
+  font-family: Muli;
+  font-size: 22px;
+  font-weight: bold;
+}
+@-webkit-keyframes FadeOut {
+  0% {
+    opacity: 0;
+  }
+  80% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes FadeOut {
+  0% {
+    opacity: 0;
+  }
+
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.classes {
+  padding: 20px;
+  margin: 40px;
+  background-color: white;
+
+  height: 100px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
